css/predefined.css
body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
}

/*removing default bootstrap padding*/
.inside-element {
  padding: 0;
}

.heading-card {
  color: rgba(255, 255, 255, 1);
  font-size: 42px;
  line-height: 40px;
  text-align: left;
}

.paragraph-card {
  color: rgba(255, 255, 255, 1);
  font-size: 18px;
  line-height: 24px;
  letter-spacing: 0.9px;
  text-align: left;
}

.heading-1 {
  color: #000000;
  font-size: 64px;
  font-weight: 500;
  opacity: 0.85;
  text-align: left;
}

.heading-2 {
  color: #000000;
  font-size: 30px;
  font-weight: bold;
  line-height: 40px;
  opacity: 0.85;
  text-align: left;
}

.heading-3 {
  color: #000000;
  font-size: 25px;
  line-height: 1.52;
  opacity: 0.85;
  text-align: left;
}

.heading-3-box {
  margin-top: 32px;
}

.subheading {
  color: #000000;
  font-size: 19px;
  font-weight: bold;
  opacity: 0.85;
  text-align: left;
}

.sub-subheading {
  color: #000000;
  font-size: 17px;
  font-weight: 500;
  opacity: 0.85;
  text-align: left;
}

.navigation-text {
  color: #000000;
  float: right;
  font-size: 16px;
  font-weight: 500;
  opacity: 0.85;
  text-align: left;
  width: 70px;
}

.paragraph {
  color: #000000;
  font-size: 20px;
  line-height: 34px;
  letter-spacing: 1px;
  opacity: 0.85;
  text-align: left;
}

.description {
  color: #000000;
  font-size: 18px;
  font-style: italic;
  opacity: 0.65;
  text-align: center;
}

.list {
  color: #000000;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.8px;
  opacity: 0.85;
  text-align: left;
}

.site-title {
  color: #000000;
  font-size: 26px;
  font-weight: bold;
  opacity: 0.85;
  text-align: left;
}

body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
}

/*removing default bootstrap padding*/
.inside-element {
  padding: 0;
}

.heading-card {
  color: rgba(255, 255, 255, 1);
  font-size: 42px;
  line-height: 40px;
  text-align: left;
}

.paragraph-card {
  color: rgba(255, 255, 255, 1);
  font-size: 18px;
  line-height: 24px;
  letter-spacing: 0.9px;
  text-align: left;
}

.heading-1 {
  color: #000000;
  font-size: 64px;
  font-weight: 500;
  opacity: 0.85;
  text-align: left;
}

.heading-2 {
  color: #000000;
  font-size: 30px;
  font-weight: bold;
  line-height: 40px;
  opacity: 0.85;
  text-align: left;
}

.heading-3 {
  color: #000000;
  font-size: 25px;
  line-height: 1.52;
  opacity: 0.85;
  text-align: left;
}

.subheading {
  color: #000000;
  font-size: 20px;
  font-weight: bold;
  opacity: 0.85;
  text-align: left;
}

.sub-subheading {
  color: #000000;
  font-size: 17px;
  font-weight: 500;
  opacity: 0.85;
  text-align: left;
}

.navigation-text {
  color: #000000;
  float: right;
  font-size: 16px;
  font-weight: 500;
  opacity: 0.85;
  text-align: left;
  width: 70px;
}

.paragraph {
  color: #000000;
  font-size: 18px;
  line-height: 34px;
  letter-spacing: 1px;
  opacity: 0.85;
  text-align: left;
}

.list {
  color: #000000;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.8px;
  opacity: 0.85;
  text-align: left;
}

.box-1, .box-2, .box-3 {
  margin-bottom: 40px;
}

.box-1 {
  height: 684px;
  width: 100%;
}

.box-2 {
  height: 100%;
  width: 100%;
}

.box-3 {
  height: 440px;
  width: 100%;
}

.site-title {
  color: #000000;
  font-size: 26px;
  font-weight: bold;
  opacity: 0.85;
  text-align: left;
}
.spacer-1 {
  height: 16px;
  clear: both;
}

.spacer-2 {
  height: 24px;
  clear: both;
}

.spacer-3 {
  height: 32px;
  clear: both;
}

.spacer-4 {
  height: 40px;
  clear: both;
}

.spacer-5 {
  height: 48px;
  clear: both;
}

.spacer-6 {
  height: 56px;
  clear: both;
}

.spacer-7 {
  height: 80px;
  clear: both;
}

.spacer-9 {
  height: 88px;
  clear: both;
}

.spacer-8 {
  height: 96px;
  clear: both;
}

.spacer-8 {
  height: 96px;
}



/* FOOTER */
footer {
  display: inline-block;
  height: 394px;
  width: 100%;
}

.footer-content {

  border-top: 2px solid #d8d8d8;
  height: 142px;
  opacity: 0.8;
  /*background-color: red;*/
}

.footer-whitespace {

  height: 252px;
  /*background-color: orange;*/
}

footer a {
  /*color: rgba(0, 0, 0, 0.87);*/
  color: #000000;
  font-size: 18px;
  font-weight: 500;
  line-height: 1.78;
  letter-spacing: 0.9px;
  opacity: 0.85;
  text-align: left;
  text-decoration: none;
}

footer a:hover {
  text-decoration: none;
  color: #000000;
}

.email, .linkedin {
  margin-top: 90px;
  border-bottom: solid;
  border-bottom-color: #2a1a87;
  border-bottom-width: 1px;
}

.email {
  float: left;
}


.linkedin {
  float: right;
}


.copyright-footer {
  text-align: center;
  color: rgba(0, 0, 0, 0.87);
  font-size: 15px;
  letter-spacing: 0.7px;
  line-height: 2.13;
  opacity: 0.5;
  padding-bottom: 12px;
}


/*NAVIGATION*/
.navigation-header {
  height: 130px;
  position: fixed;
  width: inherit;
  z-index: 1;
}
.navigation-container {
  background: #ffffff;
  height: 105px;
  width: 100%;
  opacity: 0.75;
}

.leftside-nav {
  align-items: center;
  float: left;
  display: flex;
  height: 100%;
}

.rightside-nav {
  align-items: center;
  float: right;
  display: flex;
  justify-content: flex-end;
  height: 100%;
}

.logo {
  height: 64px;
  width: 152px;
}

.site-title-wrapper {
  margin-left: 9.5px;
}

.main-title-container {
  height: 574px;img-width
  width: 100%;
  position: relative;
}

.nav-link {
  color: #000000;
  opacity: .45;
  font-size: 16px;
  font-weight: 500;
  text-align: left;
  text-decoration: none;
}

.nav-link:hover {
  text-decoration: none;
  color: #000000;
}

.nav-link:hover > a {
  text-decoration: none;
}

.nav-link > a {
  color: inherit;
}

.active-page {
  opacity: 1;
}

.active-page > a { /*for js*/
  border-bottom: solid 2px #2a1a87;
}

.bold-text {
  font-weight: bold;
}

.left-align {
  text-align: left;
}

.left-column {
  padding-right: 15px;
}

.right-column {
  padding-left: 15px;
}

.custom-left {
  padding-right: 30px;
}

.img-width {
  width: 100%;
}

.icon-right {
  margin-right: 15px;
}

.icon-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.8px;
  text-align: left;
  opacity: 0.85;
  vertical-align: middle;
  display: inline-block;
}

